initial with nuxt.js

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
-/target
-/classes
-/checkouts
-profiles.clj
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/.lein-*
-/.nrepl-port
-/resources/public/js
-/public/js/out
-/out
-/.repl
-*.log
-/.env
+# dependencies
+node_modules
+
+# logs
+npm-debug.log
+
+# Nuxt build
+.nuxt
+
+# Nuxt generate
+dist
