--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "./node_modules/.bin/eslint --ext .js,.vue --ignore-path .gitignore . --fix"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "nuxt": "^1.0.0-rc3"
   },
   "devDependencies": {
