--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "lint": "./node_modules/.bin/eslint --ext .js,.vue --ignore-path .gitignore . --fix"
   },
   "dependencies": {
+    "@nuxtjs/sitemap": "^0.0.3",
     "axios": "^0.16.2",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
-    "nuxt": "^1.0.0-rc4",
+    "nuxt": "^1.0.0-rc11",
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
